--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,35 @@ body {
   background-color: lightblue;
 }
 
-.titleOfWebpage{
-color: blue;
-text-align: center;
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  .titleOfWebpage {
+  color: rgb(46, 46, 82);
+  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.allPictures{
-margin: 0px;
-contain: content;
+.pictureContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 100%;
+  gap: 10px;
+}
+
+.picture img {
+  width: 100%;
+  object-fit: contain;
+}
+
+.component-image {
+  height: 300px;
+}
+
+.nav-button {
+  width: 15%;
+  min-width: 180px;
+  height: 30px;
+  align-items: center;
+}
+
+nav {
+  
 }
