--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,10 @@ body {
   margin: 15px;
   background-color: lightblue;
   text-align: center;
+  color: rgb(46, 46, 82);
 }
 
   .titleOfWebpage {
-  color: rgb(46, 46, 82);
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -23,10 +23,6 @@ body {
   
 }
 
-nav{
-  text-align: center;
-}
-
 
 .nav-button {
   width: 15%;
@@ -39,15 +35,14 @@ nav{
 .formTextBox{
   width: 50%;
   height:200px;
-  margin: 0% 0% 25% 25%;
-  /* margin-left: 170px; */
+  margin-left: 25%;
   align-content: center;
- display: block;
- text-align: center;
+  display: block;
+  text-align: center;
 }
 
 .componentImageContainer{
-text-align: center;
+  text-align: center;
   width: 100%;
   display: inline-block;
   /* margin: 5% ; */
@@ -60,8 +55,6 @@ text-align: center;
 }
 
 .title{
-text-align: center;
-text-decoration: solid;
-
-
+  text-align: center;
+  text-decoration: solid;
 }
